# HFT_Server

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md
Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
Include/: Protocol.h
Server/: Analytics.h  CMakeLists.txt  CMakeLists_old — копия.txt  CoinRegistry.h  RingBuffer.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
Tests/: AnalyticsTest.cpp  CMakeLists.txt  RingBufferTest.cpp  integration_test.cpp  perf_test.cpp  server_test.cpp  session_test.cpp  stress_test.cpp  utility_test.cpp
Utils/: CMakeLists.txt  Utils.cpp  Utils.h
